# data-accumulator

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md  derivation.nix  flake.nix  request_body.json  stops.json  test.py
.github/workflows/: check-and-lint.yaml  data-accumulator.yml
migrations/2022-06-08-201632_create_users/: up.sql
migrations/2022-06-08-201637_create_stations/: up.sql
migrations/2022-06-08-201642_create_regions/: up.sql
nixos-module/: default.nix
src/: main.rs  schema.rs  structs.rs
src/database/: mod.rs  models.rs  schema.rs
src/filter/: mod.rs  telegram.rs
src/processor/: database.rs  grpc.rs  mod.rs  r09.rs  raw.rs  telegram.rs
src/routes/: mod.rs
src/stations/: mod.rs
src/storage/: mod.rs
tests/: request_body.json
