[package]
name = "data-accumulator"
version = "0.5.0"
edition = "2021"

[dependencies]
tlms = { version = "0.9", git = "https://github.com/tlm-solutions/tlms.rs", features = ["telegrams", "management"]}
clap = { version = "3.1.8", features = ["derive"] }

# webserver shit
actix-web = "4.0"
actix-web-prom = "0.6.0"

# serde serialization / deserialization
serde = { version = "1.0", features = ["derive"] }

# protobuf grpc
tonic = "0.7"

# database
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
r2d2 = "*"

# utils
chrono = "0.4"
tokio = "*"
env_logger = "*"
log = "*"

